changed header padding

--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
         <div class="crazy">
             <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
         </div>
-        <div class="head">
+        <div class="head" style="padding-bottom: 2vh">
             <a href="products.html"><button id="prod">Products</button></a>
             <a href="programs.html"><button id="prog">Programs</button></a>
             <a href="team.html"><button id="te">Our Team</button></a>
