--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <div class="containter2">
   <section id="home" style="display: flex; flex-direction: column; align-items: center;">
+    <div id="home-background"></div>
     <h1>
       <img id="title" src="assets/webstuff/ptitle.png" />
       <!-- <span id="title">Pandorax</span> -->
@@ -31,16 +32,16 @@
     <p id="btext">Turning dreams into reality.</p>
   </section>
 
-  <section id="about" style="position:relative; display: flex; flex-direction: column; align-items: center;">
+  <section id="about" style="margin-top: 40vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
       <h2 id="dreambig" data-aos="fade-up" data-aos-once="true">Dream Big.</h2>
       <p  id="dbt" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"><span style="color:#fff">We all dream.</span> Maybe you wanted to become a doctor. A research scientist. An astronomer. A mathematician. But oftentimes, in your curious pursuit for knowledge, no one was there to guide you. Maybe no one was there to teach you college-level physics when you really wanted to become an engineer, and you gave up on your dream. This is a big problem. <span style="color:#fff">Well, not so much anymore with Pandorax.</span> </p>
     </div>
     <div id="dbi" data-aos="fade-up" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
-      <img id="dreambigimg3" src="assets/webstuff/indbg5.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
+      <img id="dreambigimg3" src="assets/webstuff/indbg3.png" style="height: 600px; width: 600px; transform: translate(0vw, -2vw)">
       <img id="dreambigimg4" src="assets/webstuff/indbg4.png" style="height: 442px; width: 442px; transform: translate(6vw, -24vh)">
       <img id="dreambigimg2" src="assets/webstuff/indbg2.png" style="height: 550px; width: 550px; transform: translate(8vw, 30vh)">
-      <img id="dreambigimg5" src="assets/webstuff/indbg3.png" style="height: 500px; width: 500px; transform: translate(2vw, -22vh)">
+      <img id="dreambigimg5" src="assets/webstuff/indbg5.png" style="height: 500px; width: 500px; transform: translate(2vw, -22vh)">
     </div>
   </section>
 
@@ -78,6 +79,21 @@
   <script>
     AOS.init();
   </script>
+  <script>
+    // Get the background element
+    const homeBackground = document.getElementById('home-background');
+  
+    // Calculate the opacity based on scroll position
+    function handleScroll() {
+      const scrollPercent = (window.scrollY / window.innerHeight) * 1.5;
+      const opacity = 1.7 - scrollPercent; // Adjust this factor to control the fading speed
+  
+      homeBackground.style.opacity = opacity;
+    }
+  
+    // Attach the scroll event listener
+    window.addEventListener('scroll', handleScroll);
+  </script>  
 </div>
 </body>
 </html>
