added calc primer and ppl img

--- a/index.html
+++ b/index.html
@@ -55,12 +55,16 @@
     <img id="aa" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/usaaao_guide.png" />
     <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
     <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
+    <img id="c" data-aos="fade-up"  data-aos-once="true" data-aos-delay="150" src="assets/webstuff/calculus_primer.png" />
   </div>
 
 
   <section id="contact" style="display: flex; flex-direction: column; align-items: center;">
     <h4 data-aos="fade-up"  data-aos-once="true" id="fif">Prepared and taught by 50+ high-performing high school/college students <span style="color:#00FF82">worldwide.</h2>
     <p id="ptext" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50" id="fift">Our original guides are written and taught by <span style="color:#fff">an international team of 50+ quality instructors</span> from <span style="color:#fff">top high schools and universities</span>, having received national or international recognition in prestigious <span style="color:#fff">Olympiad competitions</span>. With extensive knowledge and experience in their respective fields, our instructors will guide you from introductory to expert level through Pandorax products and programs <span style="color:#fff">— for free</span>. </p>
+    <div id="ppl" data-aos="fade-in" data-aos-once="true" data-aos-delay="100"  style="position:absolute; z-index:-1; display: flex;">
+      <img id="pplimg" src="assets/webstuff/ppl.png" style="transform: translateY(-45vh);">
+    </div>
   </section>
 
   <section id="thingy" style="display: flex; flex-direction: column; align-items: center;">
