--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
   </div>
 
-  <div style="display: flex; flex-direction: row; justify-content: center;">
+  <div style="display: flex; flex-direction: row; justify-content: center; margin-bottom: 40vh">
     <img id="aa" data-aos="fade-up"  data-aos-once="true" src="assets/webstuff/usaaao_guide.png" />
     <img id="es" data-aos="fade-up" data-aos-once="true" data-aos-delay="50"  src="assets/webstuff/useso_guide.png" />
     <img id="b" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100" src="assets/webstuff/usabo_guide.png" />
