new pandorax logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="home" style="display: flex; flex-direction: column; align-items: center;">
     <div id="home-background"></div>
     <h1>
-      <img id="title" src="assets/webstuff/ptitle.png" />
+      <img id="title" src="assets/webstuff/pandorax_new_logo.png" />
       <!-- <span id="title">Pandorax</span> -->
     </h1>
     <p id="btext">Turning dreams into reality.</p>
