added basic executive profile cards + basic sm icon model

--- a/programs.html
+++ b/programs.html
@@ -46,7 +46,7 @@
     <section class="useso" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h1 style="font-size: 500%; font-weight: 600">USESO Bootcamp</h1>
       <p style="font-size: 140%;">Taught by top US Earth Science Team members and USESO campers, this intensive bootcamp is beginner-friendly and will teach the fundamental concepts you need to excel in the Earth Science Olympiad.</p>
-      <a style="margin-top: 1vh; font-size: 140%; color: #18ecf0" href="https://docs.google.com/forms/d/e/1FAIpQLSfBEyXHo54COpaFtikfbli59HGILDYgtBKqokx_qDvoMw-vWg/closedform"><p>Learn More</p></a>
+      <a style="margin-top: 1vh; font-size: 140%; color: #18ecf0" href="usesobootpage.html"><p>Learn More</p></a>
     </section>
 
     <section class="usabo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
