finished profile icon design

--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,10 +43,10 @@
         <p>Founder & CEO</p>
         <h2 style="font-size: 130%; font-weight: 600">Aiden Pan</h2>
         <p style="font-size: 90%;">Aiden led the recruitment and development of the Olympiad Guides. Without a mentor, he is a published biomed researcher, ISEF finalist in Physics, USESO national finalist, VEX Robotics World Championship Top 20, and captain of his high school's nationally-ranked science olympiad team, who (emotionally) claimed the title of NY state champions in 2021.</p>
-        <div class="profile-details">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+        <div class="social-details">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -58,10 +58,10 @@
         <h2 style="font-size: 130%; font-weight: 600">Amit Saha</h2>
         <p style="font-size: 90%;">Amit leads the development of the mentorship program of Pandorax. Previously, he pursued research at multiple university laboratories and was recognized as a Regeneron STS Scholar and Grand Award winner at ISEF. As COO of Pandorax, Amit seeks to combine his expertise in research with his passion for scientific education to bring research to all students.</p>
       </div>
-      <div class="profile-details">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+      <div class="social-details">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
 
@@ -72,10 +72,10 @@
         <h2 style="font-size: 130%; font-weight: 600">Arjun Krish</h2>
         <p style="font-size: 90%;">Arjun was the sole coder of the Pandorax website. He placed in the USABO Top 50 as a freshman and conducts research in neuroscience and ophthalmology at Stanford University. He leads his school's Science Journalism club and is the biology main of their science bowl team that (hopes) to go to nats again.</p>
       </div>
-      <div class="profile-details">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+      <div class="social-details">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
 
@@ -86,10 +86,10 @@
         <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
         <p style="font-size: 90%;">David qualified for the US International Earth Science Olympiad Team in 10th grade, where he placed 2nd internationally on the individual test and received a gold medal. He also loves to compete in STEM competitions, captaining his high school's science bowl team, which he led to become national champions in 2023.</p>
       </div>
-      <div class="profile-details">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+      <div class="social-details">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
 
@@ -100,10 +100,10 @@
         <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
         <p style="font-size: 90%;">Aryan has been fascinated by STEM throughout his entire life. He is a USABO National Finalist, USAJMO winner, USACO Platinum Division competitor, USNCO Honors awardee, USAPhO Bronze Medal recipient, and is currently conducting research in math at MIT PRIMES-USA. As the CHRO at Pandorax, Aryan hopes to share his love of STEM with other science enthusiasts.</p>
       </div>
-      <div class="profile-details">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+      <div class="social-details">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
   </div>
