removed get started button animation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h5 id="bsbg" data-aos="fade-up"  data-aos-once="true" data-aos-delay="50">Open the pandora box now.</h3>
     <div id="container">
       <a href="products.html">
-        <button class="btn" data-aos="fade-up"  data-aos-once="true" data-aos-delay="100"s>Get Started</button>
+        <button class="btn" >Get Started</button>
       </a>
     </div>
   </section>
