--- a/team.html
+++ b/team.html
@@ -376,7 +376,7 @@
     </div>
 
     <div class="bottomprof">
-      <img src="assets/webstuff/pplimg/aidenpan.png" />
+      <img src="assets/webstuff/pplimg/alex pan.png" />
       <div class = "writerdetails">
         <h4>Alex Pan</h4>
         <p style="margin-bottom: 10px; color:#ffd0f7">USABO Guide</p>
@@ -411,7 +411,7 @@
     </div>  
 
     <div class="bottomprof">
-      <img src="assets/webstuff/pplimg/aidenpan.png" />
+      <img src="assets/webstuff/pplimg/derek.png" />
       <div class = "writerdetails">
         <h4>Derek Minn</h4>
         <p style="margin-bottom: 10px; color:#ffd0f7">USABO Guide</p>
