ourteam page stuff i forgor

--- a/team.html
+++ b/team.html
@@ -247,7 +247,6 @@
         <h4>Sara Lia</h4>
         <p style="margin-bottom: 10px; color:#cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
-          <li>USESO Guide</li>
           <li>IESO gold medalist</li>
           <li>IChO qualfier</li>
         </ul>
@@ -258,7 +257,7 @@
       <img src="assets/webstuff/pplimg/leo li.png" />
       <div class = "writerdetails">
         <h4>Leo Li</h4>
-        <p style="margin-bottom: 10px; color:#cfe2f3">Useso Guide</p>
+        <p style="margin-bottom: 10px; color:#cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
           <li>IPhO silver medalist</li>
           <li>IOAA gold medalist</li>
