--- a/usesobootpage.html
+++ b/usesobootpage.html
@@ -5,25 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pandorax</title>
-    <link rel="stylesheet" href="assets/products.css">
+    <link rel="stylesheet" href="assets/usesoboot.css">
     <link rel="icon" href="assets/webstuff/pandoraxO">
     <style>
       @import url('https://fonts.cdnfonts.com/css/poppins');
     </style>
 </head>
+<header>
+    <div class="crazy">
+        <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
+    </div>
+    <div class="head" style="padding-bottom: 2vh">
+        <a href="products.html"><button id="prod">Products</button></a>
+        <a href="programs.html"><button id="prog">Programs</button></a>
+        <a href="team.html"><button id="te">Our Team</button></a>
+        <a href="contact.html"><button id="cont">Contact</button></a>
+    </div>
+</header>  
 <body>
-    <header>
-        <div class="crazy">
-            <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
-        </div>
-        <div class="head" style="padding-bottom: 2vh">
-            <a href="products.html"><button id="prod">Products</button></a>
-            <a href="programs.html"><button id="prog">Programs</button></a>
-            <a href="team.html"><button id="te">Our Team</button></a>
-            <a href="contact.html"><button id="cont">Contact</button></a>
-        </div>
-    </header>
+    <h1>USESO Bootcamp</h1>
     
+    <section class="description">
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 9 classes from 8/1 - 8/9 every day 7-8:30 PM EST</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This boot camp prepares students for the first round of the US Earth Science Olympiad, assuming no prior experience with Earth science. This boot camp covers all four spheres of Earth: geosphere, hydrosphere, atmosphere, and astronomy. By the end of the boot camp, students should have enough knowledge to reach the national training camp of the USESO.</p>
+        <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None, but a basic understanding of high school algebra is recommended.</p>
+    </section>
+
+
+
+
+
+    <h3>Our Instructors</h2>
+
+    <div class="executive"> 
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/davidzhou.png" alt="David Zhou"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
+            <ul>
+              <li>IESO Gold Medalist</li>
+              <li>National Science Bowl Champion</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/leo li.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Leo Li</h2>
+            <ul>
+              <li>IESO Gold Medalist</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="break"></div>
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/Aashraychegu.jpg"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
+            <ul>
+              <li>IESO Gold Medalist</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/logan reich.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
+            <ul>
+              <li>IESO Alternate</li>
+              <li>USAAAO Gold Medalist</li>
+            </ul>
+          </div>
+        </div>
+
+    </div>
+
+    <section class="container">
+      <a href="https://usabo.guide"><button id="bruh">Sign Up</button></a>
+    </section>
 
 <script src="assets/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
