--- a/team.html
+++ b/team.html
@@ -259,8 +259,7 @@
         <h4>Leo Li</h4>
         <p style="margin-bottom: 10px; color:#cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
-          <li>IPhO silver medalist</li>
-          <li>IOAA gold medalist</li>
+          <li>IESO gold medalist</li>
         </ul>
       </div>
     </div>  
