added useso signuo firm

--- a/usesobootpage.html
+++ b/usesobootpage.html
@@ -85,7 +85,7 @@
     </div>
 
     <section class="container">
-      <a href="https://usabo.guide"><button id="bruh">Sign Up</button></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBEyXHo54COpaFtikfbli59HGILDYgtBKqokx_qDvoMw-vWg/closedform"><button id="bruh">Sign Up</button></a>
     </section>
 
 <script src="assets/script.js"></script>
