--- a/programs.html
+++ b/programs.html
@@ -51,7 +51,7 @@
 
     <section class="usabo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 style="font-size: 500%; font-weight: 600">USABO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by top USA Biolympiad winners and finalists, this 8 week bootcamp is beginner-friendly and will cover every topic that shows up on the Biology Olympiad in considerable depth and lead you to your success.</p>
+      <p style="font-size: 140%;">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.</p>
       <a style=" font-size: 140%; color:  #ff7ee3" href="usabobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
