--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -39,22 +39,24 @@
 
     <div class="executive"> 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/davidzhou.png" alt="David Zhou"/>
+          <img src="assets/webstuff/pplimg/fu xin chen.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Fu Xing Chen</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
-              <li>National Science Bowl Champion</li>
+              <li>MIT '27</li>
+              <li>USABO national finalist</li>
             </ul>
           </div>
         </div>
 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/leo li.png"/>
+        <div class="profile-card" style="height: 485px">
+          <img src="assets/webstuff/pplimg/carolina k.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Leo Li</h2>
+            <h2 style="font-size: 130%; font-weight: 600;">Carolina K.</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>USABO bronze (top 12)</li>
+              <li>2x USABO national finalist</li>
+              <li>Scioly national medalist</li>
             </ul>
           </div>
         </div>
@@ -62,22 +64,23 @@
         <div class="break"></div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/Aashraychegu.jpg"/>
+          <img src="assets/webstuff/pplimg/zelmay.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Zelmay Jan</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>USABO top 50</li>
+              <li>USMDO gold medalist</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/logan reich.png"/>
+          <img src="assets/webstuff/pplimg/arjunkrish.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Arjun Krish</h2>
             <ul>
-              <li>IESO Alternate</li>
-              <li>USAAAO Gold Medalist</li>
+              <li>USABO top 50</li>
+              <li>2x USABO semifinalist</li>
             </ul>
           </div>
         </div>
