edited bootcamp descriptions

--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -16,7 +16,7 @@
         <a href="index.html"><img id="logo" src="assets/webstuff/ptitle.png" /></a>
     </div>
     <div class="head" style="padding-bottom: 2vh">
-        <a href="products.html"><button id="prod">Products</button></a>
+        <a href="products.html"><button id="prod">Products</button></butta>
         <a href="programs.html"><button id="prog">Programs</button></a>
         <a href="team.html"><button id="te">Our Team</button></a>
         <a href="contact.html"><button id="cont">Contact</button></a>
@@ -39,22 +39,22 @@
 
     <div class="executive"> 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/davidzhou.png" alt="David Zhou"/>
+          <img src="assets/webstuff/pplimg/ong zhi zhang.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Ong Zhi Zhang</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
-              <li>National Science Bowl Champion</li>
+              <li>IPhO silver medalist</li>
+              <li>IOAA gold medalist</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/leo li.png"/>
+          <img src="assets/webstuff/pplimg/henry ding.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Leo Li</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Henry Ding</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>2x USAPhO gold medalist</li>
             </ul>
           </div>
         </div>
@@ -62,22 +62,12 @@
         <div class="break"></div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/Aashraychegu.jpg"/>
-          <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
-            <ul>
-              <li>IESO Gold Medalist</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="profile-card">
           <img src="assets/webstuff/pplimg/logan reich.png"/>
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
             <ul>
-              <li>IESO Alternate</li>
-              <li>USAAAO Gold Medalist</li>
+              <li>IPhO silver medalist</li>
+              <li>IOAA gold medalist</li>
             </ul>
           </div>
         </div>
