ml bootcamp page finished

--- a/mlbootpage.html
+++ b/mlbootpage.html
@@ -38,23 +38,25 @@
     <h3>Our Instructors</h2>
 
     <div class="executive"> 
-        <div class="profile-card">
-          <img src="assets/webstuff/pplimg/davidzhou.png" alt="David Zhou"/>
+        <div class="profile-card" style="height: 485px">
+          <img src="assets/webstuff/pplimg/amitsaha.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">David Zhou</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Amit Saha</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
-              <li>National Science Bowl Champion</li>
+              <li>ISEF 4th Place in Computational Bio</li>
+              <li>Regeneron STS Scholar</li>
+              <li>USNCO Finalist</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/leo li.png"/>
+          <img src="assets/webstuff/pplimg/ankit.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Leo Li</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Ankit Biswas</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>ISEF 3rd Place in Physics/Astronomy</li>
+              <li>Davidson Fellow</li>
             </ul>
           </div>
         </div>
@@ -62,22 +64,23 @@
         <div class="break"></div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/Aashraychegu.jpg"/>
+          <img src="assets/webstuff/pplimg/vincent huang.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Aashray Chegu</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Vincent Huang</h2>
             <ul>
-              <li>IESO Gold Medalist</li>
+              <li>ISEF 2th Place in Material Science</li>
+              <li>AIME qualifier</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/logan reich.png"/>
+          <img src="assets/webstuff/pplimg/aidenpan.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Aiden Pan</h2>
             <ul>
-              <li>IESO Alternate</li>
-              <li>USAAAO Gold Medalist</li>
+              <li>ISEF Finalist in Physics/Astronomy</li>
+              <li>VEX Robotics World Top 20</li>
             </ul>
           </div>
         </div>
@@ -85,7 +88,7 @@
     </div>
 
     <section class="container">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBEyXHo54COpaFtikfbli59HGILDYgtBKqokx_qDvoMw-vWg/closedform"><button id="bruh">Sign Up</button></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaOqzPS-UR3jU3K4WkT5a7XC8H9vVL6GhpOB17ZWevy-CK3Q/viewform"><button id="bruh">Sign Up</button></a>
     </section>
 
 <script src="assets/script.js"></script>
