--- a/programs.html
+++ b/programs.html
@@ -57,20 +57,20 @@
 
     <section class="usapho" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 style="font-size: 500%; font-weight: 600">USAPhO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO.      </p>
+      <p style="font-size: 140%;">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO.</p>
       <a style=" font-size: 140%; color: #dfb26b " href="usaphobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usnco" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 style="font-size: 500%; font-weight: 600">USNCO Bootcamp</h2>
-      <p style="font-size: 140%;">Taught by top USA Biolympiad winners and finalists, this 8 week bootcamp is beginner-friendly and will cover every topic that shows up on the Biology Olympiad in considerable depth and lead you to your success.</p>
+      <p style="font-size: 140%;">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.</p>
       <a style=" font-size: 140%; color:  #bada55" href="usncobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
     
     <section class="ml" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h3 style="font-size: 500%; font-weight: 600">Machine Learning Research Bootcamp</h3>
-      <p style="font-size: 140%;">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced machine learning that can be applied to produce cutting-edge research innovations.</p>
-      <a style=" font-size: 140%; color: #def821" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+      <p style="font-size: 140%;">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.</p>
+      <a style=" font-size: 140%; color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
   </div>
 
